fixed typos and Profile index view

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,10 +7,8 @@
 
 <% if user_signed_in? %>
   <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete } %><br>
+  <%= link_to "Create Post", new_post_path %><br>
 <% end %>
-
-<% link_to "Create Post", new_post_path %><br>
-
 
 <% @posts.each do |post| %>
   <h3><%= post.title %></h3>
